--- a/portfolio.html
+++ b/portfolio.html
@@ -57,6 +57,8 @@
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">                                            
                     <img class="portfolio-list-foto" src="./images/technocryak1.jpg" alt="Команда" width="370">
+                    <p class="card-text" >Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
+                    шпионажа и атак на защищённые сервера конкурентов.</p>
                     <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name">Технокряк</h2>
                     <p class="portfolio-list-type">Веб-сайт</p>
