--- a/portfolio.html
+++ b/portfolio.html
@@ -56,9 +56,11 @@
                        <ul class="portfolio-list list">
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">                                            
-                    <img class="portfolio-list-foto" src="./images/technocryak1.jpg" alt="Команда" width="370">
+                    <div class="card-text-wrapper">
+                        <img class="portfolio-list-foto" src="./images/technocryak1.jpg" alt="Команда" width="370">
                     <p class="card-text" >Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу для цифрового
                     шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
                     <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name">Технокряк</h2>
                     <p class="portfolio-list-type">Веб-сайт</p>
@@ -67,8 +69,12 @@
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">
-                    <img class="portfolio-list-foto" src="./images/neworlean2.jpg" alt="Баскетбол" width="370">
-                    <div class="portfolio-under-foto">
+                    <div class="card-text-wrapper">
+                        <img class="portfolio-list-foto" src="./images/neworlean2.jpg" alt="Баскетбол" width="370">
+                        <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                            для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                        <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name">Постер <span lang="en" >New Orlean vs Golden Star</span></h2>
                     <p class="portfolio-list-type">Дизайн</p>
                     </div>
@@ -76,8 +82,12 @@
                     </li>
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">
-                    <img class="portfolio-list-foto" src="./images/seafood3.jpg" alt="Ресторан" width="370">
-                    <div class="portfolio-under-foto">
+                    <div class="card-text-wrapper">
+                        <img class="portfolio-list-foto" src="./images/seafood3.jpg" alt="Ресторан" width="370">
+                        <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                            для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                        <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name">Ресторан <span lang="en">Seafood</span> </h2>
                     <p class="portfolio-list-type">Приложение</p>
                     </div>
@@ -85,8 +95,12 @@
                     </li>
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">
-                    <img src="./images/prime4.jpg" alt="Наушники" width="370">
-                    <div class="portfolio-under-foto">
+                    <div class="card-text-wrapper">
+                        <img src="./images/prime4.jpg" alt="Наушники" width="370">
+                        <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                            для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                        <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name">Проект <span lang="en">Prime</span> </h2>                    
                     <p class="portfolio-list-type">Маркетинг</p>
                     </div>
@@ -94,8 +108,12 @@
                     </li>
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">
-                    <img class="portfolio-list-foto" src="./images/box5.jpg" alt="Коробка" width="370">
-                    <div class="portfolio-under-foto">
+                    <div class="card-text-wrapper">
+                        <img class="portfolio-list-foto" src="./images/box5.jpg" alt="Коробка" width="370">
+                        <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                            для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                        <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name">Проект <span lang="en">Boxes</span> </h2>
                     <p class="portfolio-list-type">Приложение</p>
                     </div>
@@ -103,8 +121,12 @@
                     </li>
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">
-                    <img class="portfolio-list-foto" src="./images/inspiration6.jpg" alt="Монитор" width="370">
-                    <div class="portfolio-under-foto">
+                    <div class="card-text-wrapper">
+                        <img class="portfolio-list-foto" src="./images/inspiration6.jpg" alt="Монитор" width="370">
+                        <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                            для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                        <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name" lang="en">Inspiration has no Borders</h2>
                     <p class="portfolio-list-type">Веб-сайт</p>
                     </div>
@@ -112,8 +134,12 @@
                     </li>
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">
-                    <img class="portfolio-list-foto" src="./images/limited7.jpg" alt="Журнал" width="370">
-                    <div class="portfolio-under-foto">
+                    <div class="card-text-wrapper">
+                        <img class="portfolio-list-foto" src="./images/limited7.jpg" alt="Журнал" width="370">
+                        <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                            для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                        <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name">Издание <span lang="en">Limited Edition</span> </h2>
                     <p class="portfolio-list-type">Дизайн</p>
                     </div>
@@ -121,8 +147,12 @@
                 </li>
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">
-                    <img class="portfolio-list-foto" src="./images/lab8.jpg" alt="Бирка" width="370">
-                    <div class="portfolio-under-foto">
+                    <div class="card-text-wrapper">
+                        <img class="portfolio-list-foto" src="./images/lab8.jpg" alt="Бирка" width="370">
+                        <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                            для цифрового шпионажа и атак на защищённые сервера конкурентов.</p>
+                    </div>
+                        <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name">Проект <span lang="en">LAB</span> </h2>
                     <p class="portfolio-list-type">Маркетинг</p>
                     </div>
@@ -130,7 +160,11 @@
                    </li>
                 <li class="portfolio-item">
                     <a class="portfolio-list-link link" href="#" target="_blank" rel="noreferrer noopener">
-                    <img class="portfolio-list-foto" src="./images/growing9.jpg" alt="Ноутбук" width="370">
+                      <div class="card-text-wrapper">
+                            <img class="portfolio-list-foto" src="./images/growing9.jpg" alt="Ноутбук" width="370">
+                        <p class="card-text">Технокряк это современная площадка распространения коронавируса. Компании используют эту платформу
+                            для цифрового  шпионажа и атак на защищённые сервера конкурентов.</p>
+                        </div>
                     <div class="portfolio-under-foto">
                     <h2 class="portfolio-list-name" lang="en">Growing Business</h2>
                     <p class="portfolio-list-type">Приложение</p>
