ready for check

--- a/index.html
+++ b/index.html
@@ -109,7 +109,7 @@
             <li class="activity-list">
                 <div class="activity-wrapper">
                 <img src="./images/box3.jpg" alt="Стилус" width="370">
-                <P class="activity-text">Дизайнерские решения</P>
+                <p class="activity-text">Дизайнерские решения</p>
                 </div>
             </li>
         </ul>
